crates/pgls_pretty_print/tests/snapshots/multi/tests__type_sanity_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/type_sanity.sql
snapshot_kind: text
---
SELECT
  t1.oid,
  t1.typname
FROM
  pg_type AS t1
WHERE
  t1.typnamespace = 0 OR
  t1.typlen <= 0 AND
  t1.typlen <> -1 AND
  t1.typlen <> -2 OR
  t1.typtype
  NOT IN (
    'b',
    'c',
    'd',
    'e',
    'm',
    'p',
    'r'
  ) OR
  NOT t1.typisdefined OR
  t1.typalign
  NOT IN (
    'c', 's', 'i', 'd'
  ) OR
  t1.typstorage
  NOT IN (
    'p', 'x', 'e', 'm'
  );

SELECT
  t1.oid,
  t1.typname
FROM
  pg_type AS t1
WHERE
  t1.typbyval AND
  (t1.typlen <> 1 OR
  t1.typalign <> 'c') AND
  (t1.typlen <> 2 OR
  t1.typalign <> 's') AND
  (t1.typlen <> 4 OR
  t1.typalign <> 'i') AND
  (t1.typlen <> 8 OR
  t1.typalign <> 'd');

SELECT
  t1.oid,
  t1.typname
FROM
  pg_type AS t1
WHERE
  t1.typstorage <> 'p' AND
  (t1.typbyval OR t1.typlen <> -1);

SELECT
  t1.oid,
  t1.typname
FROM
  pg_type AS t1
WHERE
  t1.typtype = 'c' AND
  t1.typrelid = 0 OR
  t1.typtype <> 'c' AND
  t1.typrelid <> 0;

SELECT
  t1.oid,
  t1.typname
FROM
  pg_type AS t1
WHERE
  t1.typtype NOT IN ('p') AND
  t1.typname NOT LIKE '\_%' AND
  NOT EXISTS
  (SELECT
    1
  FROM
    pg_type AS t2
  WHERE
    t2.typname =
    CAST('_' || t1.typname
    AS NAME) AND
    t2.typelem = t1.oid AND
    t1.typarray = t2.oid)
ORDER BY t1.oid;

SELECT
  t1.oid,
  t1.typname AS basetype,
  t2.typname AS arraytype,
  t2.typsubscript
FROM
  pg_type AS t1
  LEFT OUTER JOIN
    pg_type AS t2
  ON t1.typarray = t2.oid
WHERE
  t1.typarray <> 0 AND
  (t2.oid IS NULL OR
  t2.typsubscript <>
  CAST('array_subscript_handler'
  AS REGPROC));

SELECT
  t1.oid,
  t1.typname
FROM
  pg_type AS t1
WHERE
  t1.typtype = 'r' AND
  NOT EXISTS
  (SELECT
    1
  FROM
    pg_range AS r
  WHERE
    rngtypid = t1.oid);

SELECT
  t1.oid,
  t1.typname,
  t1.typalign,
  t2.typname,
  t2.typalign
FROM
  pg_type AS t1
  LEFT OUTER JOIN
    pg_range AS r
  ON rngtypid = t1.oid
  LEFT OUTER JOIN
    pg_type AS t2
  ON rngsubtype = t2.oid
WHERE
  t1.typtype = 'r' AND
  (t1.typalign <>
  CASE
  WHEN t2.typalign = 'd'
  THEN CAST('d' AS CHAR)
  ELSE CAST('i' AS CHAR)
  END OR
  t2.oid IS NULL);

SELECT
  t1.oid,
  t1.typname
FROM
  pg_type AS t1
WHERE
  t1.typinput = 0 OR
  t1.typoutput = 0;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typinput = p1.oid AND
  NOT (p1.pronargs = 1 AND
  p1.proargtypes[0] =
  CAST('cstring' AS REGTYPE) OR
  p1.pronargs = 2 AND
  p1.proargtypes[0] =
  CAST('cstring' AS REGTYPE) AND
  p1.proargtypes[1] =
  CAST('oid' AS REGTYPE) OR
  p1.pronargs = 3 AND
  p1.proargtypes[0] =
  CAST('cstring' AS REGTYPE) AND
  p1.proargtypes[1] =
  CAST('oid' AS REGTYPE) AND
  p1.proargtypes[2] =
  CAST('int4' AS REGTYPE));

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typinput = p1.oid AND
  t1.typtype IN ('b', 'p') AND
  NOT (t1.typelem <> 0 AND
  t1.typlen < 0) AND
  NOT (p1.prorettype = t1.oid AND
  NOT p1.proretset)
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typinput = p1.oid AND
  t1.typelem <> 0 AND
  t1.typlen < 0 AND
  NOT p1.oid =
  CAST('array_in' AS REGPROC)
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typinput = p1.oid AND
  p1.provolatile
  NOT IN (
    'i', 's'
  );

SELECT DISTINCT
  typtype,
  typinput
FROM
  pg_type AS t1
WHERE
  t1.typtype NOT IN ('b', 'p')
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typoutput = p1.oid AND
  t1.typtype IN ('b', 'p') AND
  NOT (p1.pronargs = 1 AND
  (p1.proargtypes[0] = t1.oid OR
  p1.oid =
  CAST('array_out' AS REGPROC) AND
  t1.typelem <> 0 AND
  t1.typlen = -1))
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typoutput = p1.oid AND
  NOT (p1.prorettype =
  CAST('cstring' AS REGTYPE) AND
  NOT p1.proretset);

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typoutput = p1.oid AND
  p1.provolatile
  NOT IN (
    'i', 's'
  );

SELECT DISTINCT
  typtype,
  typoutput
FROM
  pg_type AS t1
WHERE
  t1.typtype
  NOT IN (
    'b', 'd', 'p'
  )
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  t2.oid,
  t2.typname
FROM
  pg_type AS t1
  LEFT OUTER JOIN
    pg_type AS t2
  ON t1.typbasetype = t2.oid
WHERE
  t1.typtype = 'd' AND
  t1.typoutput IS DISTINCT FROM t2.typoutput;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typreceive = p1.oid AND
  NOT (p1.pronargs = 1 AND
  p1.proargtypes[0] =
  CAST('internal' AS REGTYPE) OR
  p1.pronargs = 2 AND
  p1.proargtypes[0] =
  CAST('internal' AS REGTYPE) AND
  p1.proargtypes[1] =
  CAST('oid' AS REGTYPE) OR
  p1.pronargs = 3 AND
  p1.proargtypes[0] =
  CAST('internal' AS REGTYPE) AND
  p1.proargtypes[1] =
  CAST('oid' AS REGTYPE) AND
  p1.proargtypes[2] =
  CAST('int4' AS REGTYPE));

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typreceive = p1.oid AND
  t1.typtype IN ('b', 'p') AND
  NOT (t1.typelem <> 0 AND
  t1.typlen < 0) AND
  NOT (p1.prorettype = t1.oid AND
  NOT p1.proretset)
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typreceive = p1.oid AND
  t1.typelem <> 0 AND
  t1.typlen < 0 AND
  NOT p1.oid =
  CAST('array_recv' AS REGPROC)
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname,
  p2.oid,
  p2.proname
FROM
  pg_type AS t1,
  pg_proc AS p1,
  pg_proc AS p2
WHERE
  t1.typinput = p1.oid AND
  t1.typreceive = p2.oid AND
  p1.pronargs <> p2.pronargs;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typreceive = p1.oid AND
  p1.provolatile
  NOT IN (
    'i', 's'
  );

SELECT DISTINCT
  typtype,
  typreceive
FROM
  pg_type AS t1
WHERE
  t1.typtype NOT IN ('b', 'p')
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typsend = p1.oid AND
  t1.typtype IN ('b', 'p') AND
  NOT (p1.pronargs = 1 AND
  (p1.proargtypes[0] = t1.oid OR
  p1.oid =
  CAST('array_send' AS REGPROC) AND
  t1.typelem <> 0 AND
  t1.typlen = -1))
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typsend = p1.oid AND
  NOT (p1.prorettype =
  CAST('bytea' AS REGTYPE) AND
  NOT p1.proretset);

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typsend = p1.oid AND
  p1.provolatile
  NOT IN (
    'i', 's'
  );

SELECT DISTINCT
  typtype,
  typsend
FROM
  pg_type AS t1
WHERE
  t1.typtype
  NOT IN (
    'b', 'd', 'p'
  )
ORDER BY 1;

SELECT
  t1.oid,
  t1.typname,
  t2.oid,
  t2.typname
FROM
  pg_type AS t1
  LEFT OUTER JOIN
    pg_type AS t2
  ON t1.typbasetype = t2.oid
WHERE
  t1.typtype = 'd' AND
  t1.typsend IS DISTINCT FROM t2.typsend;

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typmodin = p1.oid AND
  NOT (p1.pronargs = 1 AND
  p1.proargtypes[0] =
  CAST('cstring[]' AS REGTYPE) AND
  p1.prorettype =
  CAST('int4' AS REGTYPE) AND
  NOT p1.proretset);

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typmodin = p1.oid AND
  p1.provolatile
  NOT IN (
    'i', 's'
  );

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typmodout = p1.oid AND
  NOT (p1.pronargs = 1 AND
  p1.proargtypes[0] =
  CAST('int4' AS REGTYPE) AND
  p1.prorettype =
  CAST('cstring' AS REGTYPE) AND
  NOT p1.proretset);

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typmodout = p1.oid AND
  p1.provolatile
  NOT IN (
    'i', 's'
  );

SELECT
  t1.oid,
  t1.typname,
  t2.oid,
  t2.typname
FROM
  pg_type AS t1,
  pg_type AS t2
WHERE
  t1.typelem = t2.oid AND
  NOT (t1.typmodin = t2.typmodin AND
  t1.typmodout = t2.typmodout);

SELECT
  t1.oid,
  t1.typname,
  t2.oid,
  t2.typname
FROM
  pg_type AS t1,
  pg_type AS t2
WHERE
  t1.typarray = t2.oid AND
  NOT t1.typdelim = t2.typdelim;

SELECT
  t1.oid,
  t1.typname,
  t1.typalign,
  t2.typname,
  t2.typalign
FROM
  pg_type AS t1,
  pg_type AS t2
WHERE
  t1.typarray = t2.oid AND
  t2.typalign <>
  CASE
  WHEN t1.typalign = 'd'
  THEN CAST('d' AS CHAR)
  ELSE CAST('i' AS CHAR)
  END;

SELECT
  t1.oid,
  t1.typname,
  t1.typelem
FROM
  pg_type AS t1
WHERE
  t1.typelem <> 0 AND
  t1.typsubscript = 0;

SELECT
  t1.oid,
  t1.typname,
  t1.typelem,
  t1.typlen,
  t1.typbyval
FROM
  pg_type AS t1
WHERE
  t1.typsubscript =
  CAST('array_subscript_handler'
  AS REGPROC) AND
  NOT (t1.typelem <> 0 AND
  t1.typlen = -1 AND
  NOT t1.typbyval);

SELECT
  t1.oid,
  t1.typname,
  t1.typelem,
  t1.typlen,
  t1.typbyval
FROM
  pg_type AS t1
WHERE
  t1.typsubscript =
  CAST('raw_array_subscript_handler'
  AS REGPROC) AND
  NOT (t1.typelem <> 0 AND
  t1.typlen > 0 AND
  NOT t1.typbyval);

SELECT
  t1.oid,
  t1.typname,
  p1.oid,
  p1.proname
FROM
  pg_type AS t1,
  pg_proc AS p1
WHERE
  t1.typanalyze = p1.oid AND
  NOT (p1.pronargs = 1 AND
  p1.proargtypes[0] =
  CAST('internal' AS REGTYPE) AND
  p1.prorettype =
  CAST('bool' AS REGTYPE) AND
  NOT p1.proretset);

SELECT
  d.oid,
  d.typname,
  d.typanalyze,
  t.oid,
  t.typname,
  t.typanalyze
FROM
  pg_type AS d
  INNER JOIN
    pg_type AS t
  ON d.typbasetype = t.oid
WHERE
  d.typanalyze <> t.typanalyze;

SELECT
  t.oid,
  t.typname,
  t.typanalyze
FROM
  pg_type AS t
  LEFT OUTER JOIN
    pg_range AS r
  ON t.oid = r.rngtypid
WHERE
  t.typbasetype = 0 AND
  (t.typanalyze =
  CAST('range_typanalyze'
  AS REGPROC)) <>
  (r.rngtypid IS NOT NULL);

SELECT
  t.oid,
  t.typname,
  t.typanalyze
FROM
  pg_type AS t
WHERE
  t.typbasetype = 0 AND
  (t.typanalyze =
  CAST('array_typanalyze'
  AS REGPROC)) <>
  (t.typsubscript =
  CAST('array_subscript_handler'
  AS REGPROC))
ORDER BY 1;

SELECT
  c1.oid,
  c1.relname
FROM
  pg_class AS c1
WHERE
  relkind
  NOT IN (
    'r',
    'i',
    'S',
    't',
    'v',
    'm',
    'c',
    'f',
    'p',
    'I'
  ) OR
  relpersistence
  NOT IN (
    'p', 'u', 't'
  ) OR
  relreplident
  NOT IN (
    'd', 'n', 'f', 'i'
  );

SELECT
  c1.oid,
  c1.relname
FROM
  pg_class AS c1
WHERE
  c1.relkind
  NOT IN (
    'S', 'v', 'f', 'c', 'p'
  ) AND
  c1.relam = 0;

SELECT
  c1.oid,
  c1.relname
FROM
  pg_class AS c1
WHERE
  c1.relkind
  IN (
    'S', 'v', 'f', 'c', 'p'
  ) AND
  c1.relam <> 0;

SELECT
  pc.oid,
  pc.relname,
  pa.amname,
  pa.amtype
FROM
  pg_class AS pc
  INNER JOIN
    pg_am AS pa
  ON pc.relam = pa.oid
WHERE
  pc.relkind IN ('i', 'I') AND
  pa.amtype <> 'i';

SELECT
  pc.oid,
  pc.relname,
  pa.amname,
  pa.amtype
FROM
  pg_class AS pc
  INNER JOIN
    pg_am AS pa
  ON pc.relam = pa.oid
WHERE
  pc.relkind IN ('r', 't', 'm') AND
  pa.amtype <> 't';

SELECT
  a1.attrelid,
  a1.attname
FROM
  pg_attribute AS a1
WHERE
  a1.attrelid = 0 OR
  a1.atttypid = 0 OR
  a1.attnum = 0 OR
  a1.attinhcount < 0 OR
  a1.attinhcount = 0 AND
  NOT a1.attislocal;

SELECT
  a1.attrelid,
  a1.attname,
  c1.oid,
  c1.relname
FROM
  pg_attribute AS a1,
  pg_class AS c1
WHERE
  a1.attrelid = c1.oid AND
  a1.attnum > c1.relnatts;

SELECT
  c1.oid,
  c1.relname
FROM
  pg_class AS c1
WHERE
  c1.relnatts <>
  (SELECT
    COUNT(*)
  FROM
    pg_attribute AS a1
  WHERE
    a1.attrelid = c1.oid AND
    a1.attnum > 0);

SELECT
  a1.attrelid,
  a1.attname,
  t1.oid,
  t1.typname
FROM
  pg_attribute AS a1,
  pg_type AS t1
WHERE
  a1.atttypid = t1.oid AND
  (a1.attlen <> t1.typlen OR
  a1.attalign <> t1.typalign OR
  a1.attbyval <> t1.typbyval OR
  a1.attstorage <> t1.typstorage AND
  a1.attstorage <> 'p');

CREATE FUNCTION is_catalog_text_unique_index_oid(OID)
RETURNS BOOLEAN
AS 'regresslib', 'is_catalog_text_unique_index_oid'
LANGUAGE "c"
STRICT;

SELECT
  CAST(indexrelid AS REGCLASS)
FROM
  pg_index
WHERE
  is_catalog_text_unique_index_oid(
  indexrelid
  ) <>
  (indisunique AND
  indexrelid < 16384 AND
  EXISTS
  (SELECT
    1
  FROM
    pg_attribute
  WHERE
    attrelid = indexrelid AND
    atttypid =
    CAST('text' AS REGTYPE)));

SELECT
  r.rngtypid,
  r.rngsubtype
FROM
  pg_range AS r
WHERE
  r.rngtypid = 0 OR
  r.rngsubtype = 0 OR
  r.rngsubopc = 0;

SELECT
  r.rngtypid,
  r.rngsubtype,
  r.rngcollation,
  t.typcollation
FROM
  pg_range AS r
  INNER JOIN
    pg_type AS t
  ON t.oid = r.rngsubtype
WHERE
  (rngcollation = 0) <>
  (typcollation = 0);

SELECT
  r.rngtypid,
  r.rngsubtype,
  o.opcmethod,
  o.opcname
FROM
  pg_range AS r
  INNER JOIN
    pg_opclass AS o
  ON o.oid = r.rngsubopc
WHERE
  o.opcmethod <> 403 OR
  o.opcintype <> r.rngsubtype AND
  NOT (o.opcintype =
  CAST('pg_catalog.anyarray'
  AS REGTYPE) AND
  EXISTS
  (SELECT
    1
  FROM
    pg_catalog.pg_type
  WHERE
    oid = r.rngsubtype AND
    typelem <> 0 AND
    typsubscript =
    CAST('array_subscript_handler'
    AS REGPROC)));

SELECT
  r.rngtypid,
  r.rngsubtype,
  p.proname
FROM
  pg_range AS r
  INNER JOIN
    pg_proc AS p
  ON p.oid = r.rngcanonical
WHERE
  pronargs <> 1 OR
  proargtypes[0] <> rngtypid OR
  prorettype <> rngtypid;

SELECT
  r.rngtypid,
  r.rngsubtype,
  p.proname
FROM
  pg_range AS r
  INNER JOIN
    pg_proc AS p
  ON p.oid = r.rngsubdiff
WHERE
  pronargs <> 2 OR
  proargtypes[0] <> rngsubtype OR
  proargtypes[1] <> rngsubtype OR
  prorettype <>
  CAST('pg_catalog.float8'
  AS REGTYPE);

SELECT
  r.rngtypid,
  r.rngsubtype,
  r.rngmultitypid
FROM
  pg_range AS r
WHERE
  r.rngmultitypid IS NULL OR
  r.rngmultitypid = 0;

CREATE TABLE tab_core_types
AS
  SELECT
    CAST('(11,12)' AS point),
    CAST('(1,1),(2,2)' AS line),
    CAST('((11,11),(12,12))'
    AS lseg),
    CAST('((11,11),(13,13))'
    AS box),
    CAST('((11,12),(13,13),(14,14))'
    AS path)
    AS openedpath,
    CAST('[(11,12),(13,13),(14,14)]'
    AS path)
    AS closedpath,
    CAST('((11,12),(13,13),(14,14))'
    AS polygon),
    CAST('1,1,1' AS circle),
    CAST('today' AS DATE),
    CAST('now' AS TIME),
    CAST('now' AS TIMESTAMP),
    CAST('now'
    AS TIME WITH TIME ZONE),
    CAST('now'
    AS TIMESTAMP WITH TIME ZONE),
    CAST('12 seconds' AS INTERVAL),
    CAST('{"reason":"because"}'
    AS JSON),
    CAST('{"when":"now"}'
    AS JSONB),
    CAST('$.a[*] ? (@ > 2)'
    AS jsonpath),
    CAST('127.0.0.1' AS INET),
    CAST('127.0.0.0/8' AS CIDR),
    CAST('00:01:03:86:1c:ba'
    AS MACADDR8),
    CAST('00:01:03:86:1c:ba'
    AS MACADDR),
    CAST(2 AS SMALLINT),
    CAST(4 AS INT),
    CAST(8 AS BIGINT),
    CAST(4 AS REAL),
    CAST('8' AS DOUBLE PRECISION),
    CAST(pi() AS NUMERIC),
    CAST('foo' AS CHAR),
    CAST('c' AS CHAR),
    CAST('abc' AS VARCHAR),
    CAST('name' AS NAME),
    CAST('txt' AS TEXT),
    CAST(TRUE AS BOOLEAN),
    CAST('\xDEADBEEF' AS BYTEA),
    CAST(B'10001' AS BIT(1)),
    CAST(B'10001' AS BIT VARYING)
    AS varbit,
    CAST('12.34' AS MONEY),
    CAST('abc' AS refcursor),
    CAST('1 2' AS int2vector),
    CAST('1 2' AS oidvector),
    CAST(format('%I=UC/%I', USER, USER)
    AS aclitem)
    AS aclitem,
    CAST('a fat cat sat on a mat and ate a fat rat'
    AS TSVECTOR),
    CAST('fat & rat' AS TSQUERY),
    CAST('a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11'
    AS UUID),
    CAST('11' AS xid8),
    CAST('pg_class' AS REGCLASS),
    CAST('regtype' AS REGTYPE)
    AS type,
    CAST('pg_monitor' AS regrole),
    CAST(CAST('pg_class' AS REGCLASS)
    AS OID),
    CAST('template1'
    AS regdatabase),
    CAST('(1,1)' AS TID),
    CAST('2' AS XID),
    CAST('3' AS CID),
    CAST('10:20:10,14,15'
    AS TXID_SNAPSHOT),
    CAST('10:20:10,14,15'
    AS pg_snapshot),
    CAST('16/B374D848' AS PG_LSN),
    CAST(1
    AS information_schema.cardinal_number),
    CAST('l'
    AS information_schema.character_data),
    CAST('n'
    AS information_schema.sql_identifier),
    CAST('now'
    AS information_schema.time_stamp),
    CAST('YES'
    AS information_schema.yes_or_no),
    CAST('(1,2)' AS INT4RANGE),
    CAST('{(1,2)}'
    AS int4multirange),
    CAST('(3,4)' AS INT8RANGE),
    CAST('{(3,4)}'
    AS int8multirange),
    CAST('(3,4)' AS NUMRANGE),
    CAST('{(3,4)}'
    AS nummultirange),
    CAST('(2020-01-02, 2021-02-03)'
    AS DATERANGE),
    CAST('{(2020-01-02, 2021-02-03)}'
    AS datemultirange),
    CAST('(2020-01-02 03:04:05, 2021-02-03 06:07:08)'
    AS TSRANGE),
    CAST('{(2020-01-02 03:04:05, 2021-02-03 06:07:08)}'
    AS tsmultirange),
    CAST('(2020-01-02 03:04:05, 2021-02-03 06:07:08)'
    AS TSTZRANGE),
    CAST('{(2020-01-02 03:04:05, 2021-02-03 06:07:08)}'
    AS tstzmultirange);

SELECT
  oid,
  typname,
  typtype,
  typelem,
  typarray
FROM
  pg_type AS t
WHERE
  oid < 16384 AND
  typtype NOT IN ('p', 'c') AND
  oid <> ALL (CAST(ARRAY['regproc',
  'regprocedure',
  'regoper',
  'regoperator',
  'regconfig',
  'regdictionary',
  'regnamespace',
  'regcollation']
  AS REGTYPE[])) AND
  oid <> ALL (CAST(ARRAY['gtsvector',
  'pg_node_tree',
  'pg_ndistinct',
  'pg_dependencies',
  'pg_mcv_list',
  'pg_brin_bloom_summary',
  'pg_brin_minmax_multi_summary',
  'xml']
  AS REGTYPE[])) AND
  NOT EXISTS
  (SELECT
    1
  FROM
    pg_type AS u
  WHERE
    u.typarray = t.oid) AND
  NOT EXISTS
  (SELECT
    1
  FROM
    pg_attribute AS a
  WHERE
    a.atttypid = t.oid AND
    a.attnum > 0 AND
    a.attrelid =
    CAST('tab_core_types'
    AS REGCLASS));
